<resources>
    <string name="app_name">Crunch Time</string>
    <string name="action_settings">Settings</string>
    <string name="description">Select the exercise and input number of reps or min. Click convert to calculate calories burned.</string>
    <string name="description2">Equivalent reps or min in another exercise:</string>
    <string name="enter_number">Enter Number</string>
    <string name="convert">Convert</string>
    <string name="default_number">0.0</string>
</resources>
