<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.kathyyliang.crunchtime.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exercises_spinner"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number"
        android:hint="@string/enter_number"
        android:textAlignment="center"
        android:maxLength="9"
        android:layout_below="@+id/exercises_spinner"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/reps_or_min"
        android:layout_alignBottom="@+id/number"
        android:layout_toEndOf="@+id/number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentLight"
        android:text="@string/convert"
        android:id="@+id/button"
        android:layout_below="@+id/number"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:textSize="30dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/calorie_count"
        android:text="@string/default_number"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="calories"
        android:id="@+id/calories"
        android:layout_alignBottom="@+id/calorie_count"
        android:layout_toEndOf="@+id/calorie_count" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/equivalent_exercises_spinner"
        android:textAlignment="center"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/calorie_count"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/equivalent"
        android:text="@string/default_number"
        android:layout_below="@+id/equivalent_exercises_spinner"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/equivalent_reps_or_min"
        android:layout_alignBottom="@+id/equivalent"
        android:layout_toEndOf="@+id/equivalent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description2"
        android:id="@+id/textView4"
        android:layout_marginTop="320dp" />

</RelativeLayout>
